// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`scrollMarginInlineEnd renders 0 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline-end: 0;
  -moz-scroll-margin-inline-end: 0;
  -ms-scroll-margin-inline-end: 0;
  scroll-margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: 0;
  -moz-scroll-margin-inline-end: 0;
  -ms-scroll-margin-inline-end: 0;
  scroll-margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: 0;
  -moz-scroll-margin-inline-end: 0;
  -ms-scroll-margin-inline-end: 0;
  scroll-margin-inline-end: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: 0;
  -moz-scroll-margin-inline-end: 0;
  -ms-scroll-margin-inline-end: 0;
  scroll-margin-inline-end: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInlineEnd renders function 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline-end: hasnot;
  -moz-scroll-margin-inline-end: hasnot;
  -ms-scroll-margin-inline-end: hasnot;
  scroll-margin-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: has;
  -moz-scroll-margin-inline-end: has;
  -ms-scroll-margin-inline-end: has;
  scroll-margin-inline-end: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: hasnot;
  -moz-scroll-margin-inline-end: hasnot;
  -ms-scroll-margin-inline-end: hasnot;
  scroll-margin-inline-end: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: has;
  -moz-scroll-margin-inline-end: has;
  -ms-scroll-margin-inline-end: has;
  scroll-margin-inline-end: has;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInlineEnd renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline-end: invalid.path.1;
  -moz-scroll-margin-inline-end: invalid.path.1;
  -ms-scroll-margin-inline-end: invalid.path.1;
  scroll-margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: invalid.path.1;
  -moz-scroll-margin-inline-end: invalid.path.1;
  -ms-scroll-margin-inline-end: invalid.path.1;
  scroll-margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: invalid.path.1;
  -moz-scroll-margin-inline-end: invalid.path.1;
  -ms-scroll-margin-inline-end: invalid.path.1;
  scroll-margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: invalid.path.1;
  -moz-scroll-margin-inline-end: invalid.path.1;
  -ms-scroll-margin-inline-end: invalid.path.1;
  scroll-margin-inline-end: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInlineEnd renders negative number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline-end: -54881px;
  -moz-scroll-margin-inline-end: -54881px;
  -ms-scroll-margin-inline-end: -54881px;
  scroll-margin-inline-end: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: -54881px;
  -moz-scroll-margin-inline-end: -54881px;
  -ms-scroll-margin-inline-end: -54881px;
  scroll-margin-inline-end: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: -42365px;
  -moz-scroll-margin-inline-end: -42365px;
  -ms-scroll-margin-inline-end: -42365px;
  scroll-margin-inline-end: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: -42365px;
  -moz-scroll-margin-inline-end: -42365px;
  -ms-scroll-margin-inline-end: -42365px;
  scroll-margin-inline-end: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInlineEnd renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: July;
    -moz-scroll-margin-inline-end: July;
    -ms-scroll-margin-inline-end: July;
    scroll-margin-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: August;
    -moz-scroll-margin-inline-end: August;
    -ms-scroll-margin-inline-end: August;
    scroll-margin-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: September;
    -moz-scroll-margin-inline-end: September;
    -ms-scroll-margin-inline-end: September;
    scroll-margin-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline-end: November;
    -moz-scroll-margin-inline-end: November;
    -ms-scroll-margin-inline-end: November;
    scroll-margin-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: July;
    -moz-scroll-margin-inline-end: July;
    -ms-scroll-margin-inline-end: July;
    scroll-margin-inline-end: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: August;
    -moz-scroll-margin-inline-end: August;
    -ms-scroll-margin-inline-end: August;
    scroll-margin-inline-end: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: September;
    -moz-scroll-margin-inline-end: September;
    -ms-scroll-margin-inline-end: September;
    scroll-margin-inline-end: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline-end: November;
    -moz-scroll-margin-inline-end: November;
    -ms-scroll-margin-inline-end: November;
    scroll-margin-inline-end: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: May;
    -moz-scroll-margin-inline-end: May;
    -ms-scroll-margin-inline-end: May;
    scroll-margin-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: June;
    -moz-scroll-margin-inline-end: June;
    -ms-scroll-margin-inline-end: June;
    scroll-margin-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: April;
    -moz-scroll-margin-inline-end: April;
    -ms-scroll-margin-inline-end: April;
    scroll-margin-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline-end: November;
    -moz-scroll-margin-inline-end: November;
    -ms-scroll-margin-inline-end: November;
    scroll-margin-inline-end: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: May;
    -moz-scroll-margin-inline-end: May;
    -ms-scroll-margin-inline-end: May;
    scroll-margin-inline-end: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: June;
    -moz-scroll-margin-inline-end: June;
    -ms-scroll-margin-inline-end: June;
    scroll-margin-inline-end: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-scroll-margin-inline-end: April;
    -moz-scroll-margin-inline-end: April;
    -ms-scroll-margin-inline-end: April;
    scroll-margin-inline-end: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-scroll-margin-inline-end: November;
    -moz-scroll-margin-inline-end: November;
    -ms-scroll-margin-inline-end: November;
    scroll-margin-inline-end: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInlineEnd renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-scroll-margin-inline-end: July;
    -moz-scroll-margin-inline-end: July;
    -ms-scroll-margin-inline-end: July;
    scroll-margin-inline-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline-end: August;
    -moz-scroll-margin-inline-end: August;
    -ms-scroll-margin-inline-end: August;
    scroll-margin-inline-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline-end: September;
    -moz-scroll-margin-inline-end: September;
    -ms-scroll-margin-inline-end: September;
    scroll-margin-inline-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline-end: November;
    -moz-scroll-margin-inline-end: November;
    -ms-scroll-margin-inline-end: November;
    scroll-margin-inline-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline-end: August;
    -moz-scroll-margin-inline-end: August;
    -ms-scroll-margin-inline-end: August;
    scroll-margin-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-scroll-margin-inline-end: July;
    -moz-scroll-margin-inline-end: July;
    -ms-scroll-margin-inline-end: July;
    scroll-margin-inline-end: July;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline-end: August;
    -moz-scroll-margin-inline-end: August;
    -ms-scroll-margin-inline-end: August;
    scroll-margin-inline-end: August;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline-end: September;
    -moz-scroll-margin-inline-end: September;
    -ms-scroll-margin-inline-end: September;
    scroll-margin-inline-end: September;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline-end: November;
    -moz-scroll-margin-inline-end: November;
    -ms-scroll-margin-inline-end: November;
    scroll-margin-inline-end: November;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline-end: August;
    -moz-scroll-margin-inline-end: August;
    -ms-scroll-margin-inline-end: August;
    scroll-margin-inline-end: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-inline-end: January;
    -moz-scroll-margin-inline-end: January;
    -ms-scroll-margin-inline-end: January;
    scroll-margin-inline-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline-end: December;
    -moz-scroll-margin-inline-end: December;
    -ms-scroll-margin-inline-end: December;
    scroll-margin-inline-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline-end: April;
    -moz-scroll-margin-inline-end: April;
    -ms-scroll-margin-inline-end: April;
    scroll-margin-inline-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline-end: May;
    -moz-scroll-margin-inline-end: May;
    -ms-scroll-margin-inline-end: May;
    scroll-margin-inline-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline-end: June;
    -moz-scroll-margin-inline-end: June;
    -ms-scroll-margin-inline-end: June;
    scroll-margin-inline-end: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-scroll-margin-inline-end: January;
    -moz-scroll-margin-inline-end: January;
    -ms-scroll-margin-inline-end: January;
    scroll-margin-inline-end: January;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline-end: December;
    -moz-scroll-margin-inline-end: December;
    -ms-scroll-margin-inline-end: December;
    scroll-margin-inline-end: December;
  }
}

@media January {
  .c0 {
    -webkit-scroll-margin-inline-end: April;
    -moz-scroll-margin-inline-end: April;
    -ms-scroll-margin-inline-end: April;
    scroll-margin-inline-end: April;
  }
}

@media April {
  .c0 {
    -webkit-scroll-margin-inline-end: May;
    -moz-scroll-margin-inline-end: May;
    -ms-scroll-margin-inline-end: May;
    scroll-margin-inline-end: May;
  }
}

@media June {
  .c0 {
    -webkit-scroll-margin-inline-end: June;
    -moz-scroll-margin-inline-end: June;
    -ms-scroll-margin-inline-end: June;
    scroll-margin-inline-end: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInlineEnd renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline-end: 54881px;
  -moz-scroll-margin-inline-end: 54881px;
  -ms-scroll-margin-inline-end: 54881px;
  scroll-margin-inline-end: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: 54881px;
  -moz-scroll-margin-inline-end: 54881px;
  -ms-scroll-margin-inline-end: 54881px;
  scroll-margin-inline-end: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: 42365px;
  -moz-scroll-margin-inline-end: 42365px;
  -ms-scroll-margin-inline-end: 42365px;
  scroll-margin-inline-end: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: 42365px;
  -moz-scroll-margin-inline-end: 42365px;
  -ms-scroll-margin-inline-end: 42365px;
  scroll-margin-inline-end: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInlineEnd renders string 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline-end: July;
  -moz-scroll-margin-inline-end: July;
  -ms-scroll-margin-inline-end: July;
  scroll-margin-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: July;
  -moz-scroll-margin-inline-end: July;
  -ms-scroll-margin-inline-end: July;
  scroll-margin-inline-end: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: June;
  -moz-scroll-margin-inline-end: June;
  -ms-scroll-margin-inline-end: June;
  scroll-margin-inline-end: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: June;
  -moz-scroll-margin-inline-end: June;
  -ms-scroll-margin-inline-end: June;
  scroll-margin-inline-end: June;
}

<div
    className="c0"
  />,
]
`;

exports[`scrollMarginInlineEnd renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-scroll-margin-inline-end: DarkSlateBlue;
  -moz-scroll-margin-inline-end: DarkSlateBlue;
  -ms-scroll-margin-inline-end: DarkSlateBlue;
  scroll-margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: DarkSlateBlue;
  -moz-scroll-margin-inline-end: DarkSlateBlue;
  -ms-scroll-margin-inline-end: DarkSlateBlue;
  scroll-margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: DarkSlateBlue;
  -moz-scroll-margin-inline-end: DarkSlateBlue;
  -ms-scroll-margin-inline-end: DarkSlateBlue;
  scroll-margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-scroll-margin-inline-end: DarkSlateBlue;
  -moz-scroll-margin-inline-end: DarkSlateBlue;
  -ms-scroll-margin-inline-end: DarkSlateBlue;
  scroll-margin-inline-end: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
